Routing without lazy load

--- a/src/app/pages/header/header.component.html
+++ b/src/app/pages/header/header.component.html
@@ -14,7 +14,7 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <!-- Home -->
-                <!-- <li class="nav-item">
+                <li class="nav-item">
                     <a class="nav-link" [routerLink]="['/home']" routerLinkActive="active"
                         [routerLinkActiveOptions]="{ exact: true }">Home</a>
                 </li>
@@ -29,7 +29,7 @@
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="['/videos']" routerLinkActive="active"
                         [routerLinkActiveOptions]="{ exact: true }">Videos</a>
-                </li> -->
+                </li>
                 <!-- Update Profile -->
                 <!-- <li class="nav-item" *ngIf="loginDisplay">
                     <a class="nav-link" [routerLink]="['/user/update-profile']"
@@ -37,7 +37,7 @@
                         Profile</a>
                 </li> -->
                 <!-- Examples Dropdown -->
-                <!-- <li class="nav-item dropdown">
+                <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" id="coursesDropdown" role="button" data-bs-toggle="dropdown"
                         aria-expanded="false">
                         Concepts </a>
@@ -47,7 +47,7 @@
                         </li>
 
                     </ul>
-                </li> -->
+                </li>
                 <!-- @if(this.isAdmin){
                 <li class="nav-item">
                     <a class="nav-link" [routerLink]="['/admin/question/list']" routerLinkActive="active">View
